k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-back
  namespace: iot-edge
  labels:
    app: test-back
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: test-back  # 실제 Pod는 없지만, 서비스 디스커버리를 위해 필요
  type: ClusterIP
