k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-back-dr
  namespace: iot-edge
spec:
  host: test-back.iot-edge.svc.cluster.local
  subsets:
  - name: k2p-cluster
    labels:
      cluster: kpaas-k2p
  - name: cocktail-cluster
    labels:
      cluster: kpaas-cocktail
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 100
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
