k8s/service-entry-cocktail.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: test-back-cocktail
  namespace: iot-edge
spec:
  hosts:
  - test-back.iot-edge.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: tls
    number: 15443
    protocol: TLS
  resolution: DNS
  endpoints:
  - address: 133.186.135.41  # cocktail cluster Ingress Gateway EXTERNAL-IP
    ports:
      http: 80
      tls: 15443
    labels:
      cluster: kpaas-cocktail
